--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @utility container {
     margin-inline: auto;
@@ -7,7 +7,7 @@
 }
 
 @theme {
- /*COLORS*/
+    /*COLORS*/
     --color-Blueish-950: hsl(213, 96%, 18%);
     --color-Blueish-300: hsl(228, 100%, 84%);
     --color-Blueish-200: hsl(206, 94%, 87%);
@@ -18,5 +18,5 @@
     --color-Redish-500: hsl(354, 84%, 57%);
     --color-Greyish-500: hsl(231, 11%, 63%);
     /*FONTS*/
-    --font-ubuntu: "Ubuntu", sans-serif;
+    --font-ubuntu: 'Ubuntu', sans-serif;
 }
